--- a/bars.css
+++ b/bars.css
@@ -601,9 +601,12 @@ svg {
   .pagesInputRow p {
     font-size: 13px;
   }
-  .first-line {
-    display: flex;
-    justify-content: space-between;
+  .controls {
+    order: 1;
+    margin-left: 1.5rem;
+  }
+  .openBtn {
+    order: -1;
   }
 }
 
@@ -613,6 +616,10 @@ svg {
     display: flex;
     align-items: center;
     flex-direction: column;
+  }
+  .controls {
+    order: 1;
+    margin-left: 1.5rem;
   }
 }
 
