--- a/bars.css
+++ b/bars.css
@@ -38,7 +38,7 @@ body {
 }
 
 .github {
-  margin: 40px;
+  margin-top: 50px;
 }
 
 .box {
@@ -336,7 +336,7 @@ svg {
   color: black;
   font-size: 1rem;
   border-radius: 20px;
-  margin: 0rem 0.3rem;
+  height: 100%;
   background-image: linear-gradient(
     to right,
     rgba(255, 200, 255, 0.5),
@@ -354,14 +354,26 @@ svg {
     rgba(2, 178, 232, 0.3)
   );
 }
-#user-signed-in p {
+#user-signed-in .atrributes {
   position: absolute;
-  padding: 10px;
+  display: flex;
+  align-items: center;
+  margin: 10px;
   top: 0;
   right: 0;
 }
 .sign-btn {
   font-size: 1.2rem;
+}
+.bmc-button {
+  text-decoration: none;
+}
+.bmc-button img {
+  height: 1.8rem;
+  padding: 0rem 0.4rem;
+  transform: translateY(4px);
+  /*border: 1px solid #ccc;
+  border-radius: 20px;*/
 }
 
 /* animations */
